# pipeline

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  flake.nix  meson.build
.gitlab/issue_templates/: Default.md
build-aux/: de.schmidhuberj.tubefeeder.json  player_downloader.diff
data/: de.schmidhuberj.tubefeeder.desktop  de.schmidhuberj.tubefeeder.desktop.in.in  de.schmidhuberj.tubefeeder.gschema.xml  de.schmidhuberj.tubefeeder.metainfo.xml  de.schmidhuberj.tubefeeder.metainfo.xml.in  meson.build
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/ui/: about.blp.in  about.ui.in  error_label.blp  feed_item.blp  feed_item.ui  feed_list.blp  feed_list.ui  feed_page.blp  feed_page.ui  filter_item.blp  filter_item.ui  filter_list.blp  filter_list.ui  filter_page.blp  filter_page.ui  header_bar.ui  import_window.blp  meson.build  preferences_window.ui  shortcuts.blp  shortcuts.ui  subscription_item.blp  subscription_item.ui  subscription_list.blp  subscription_list.ui  subscription_page.blp  subscription_page.ui  thumbnail.blp  thumbnail.ui  video_information_window.blp  video_information_window.ui  watch_later.blp  watch_later.ui  window.blp  window.ui
po/: LINGUAS  POTFILES  ar.po  cs.po  de.po  es.po  fa.po  fr.po  hr.po  hu.po  it.po  ja.po  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  tr.po  tubefeeder.pot  uk.po
src/: config.rs.in  csv_file_manager.rs  downloader.rs  import.rs  main.rs  player.rs
src/gui/: header_bar.rs  import_window.rs  mod.rs  predefined_piped_api.rs  predefined_player.rs  preferences_window.rs  stack_page.rs  utility.rs  video_information_window.rs  watch_later.rs  window.rs
src/gui/feed/: error_label.rs  feed_item.rs  feed_item_object.rs  feed_list.rs  feed_page.rs  thumbnail.rs
src/gui/filter/: filter_item.rs  filter_item_object.rs  filter_list.rs  filter_page.rs
src/gui/subscription/: platform.rs  subscription_item.rs  subscription_item_object.rs  subscription_list.rs  subscription_page.rs
