[package]
name = "tubefeeder"
description = "Follow video creators"
homepage = "https://mobile.schmidhuberj.de/pipeline"
repository = "https://gitlab.com/schmiddi-on-mobile/pipeline"
version = "1.14.3"
authors = ["Julian Schmidhuber <schmidhuberj2@protonmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_12"] }
gdk-pixbuf = "0.19.2"
gdk = { version = "0.8.0", package = "gdk4" }
pango = "0.19.2"
libadwaita = { version = "0.6.0", features = ["v1_4"]}
glib = "0.19.2"

tokio = {version = "1.36.0", features = ["full"]}
futures = "0.3.30"
regex = "1.10.3"
chrono = { version = "0.4.34" }
csv = "1.3.0"
reqwest = "0.11.24"

log = "0.4.20"
env_logger = "0.11.2"

image = "0.24.8"
once_cell = "1.19.0"

gettext-rs = "0.7.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tf_core = { git = "https://gitlab.com/schmiddi-on-mobile/tubefeeder-extractor.git", rev = "5f169404d9b160f5889856dba6dcd6a4a25a34f9" }
tf_join = { git = "https://gitlab.com/schmiddi-on-mobile/tubefeeder-extractor.git", rev = "5f169404d9b160f5889856dba6dcd6a4a25a34f9" }
tf_filter = { git = "https://gitlab.com/schmiddi-on-mobile/tubefeeder-extractor.git", rev = "5f169404d9b160f5889856dba6dcd6a4a25a34f9" }
tf_observer = { git = "https://gitlab.com/schmiddi-on-mobile/tubefeeder-extractor.git", rev = "5f169404d9b160f5889856dba6dcd6a4a25a34f9" }
tf_playlist = { git = "https://gitlab.com/schmiddi-on-mobile/tubefeeder-extractor.git", rev = "5f169404d9b160f5889856dba6dcd6a4a25a34f9" }
tf_yt = { package = "tf_platform_youtube", git = "https://gitlab.com/schmiddi-on-mobile/tubefeeder-extractor.git", rev = "5f169404d9b160f5889856dba6dcd6a4a25a34f9"  }
tf_pt = { package = "tf_platform_peertube", git = "https://gitlab.com/schmiddi-on-mobile/tubefeeder-extractor.git", rev = "5f169404d9b160f5889856dba6dcd6a4a25a34f9"  }
