[package]
name = "tubefeeder"
description = "Follow video creators"
homepage = "https://mobile.schmidhuberj.de/pipeline"
repository = "https://gitlab.com/schmiddi-on-mobile/pipeline"
version = "1.14.5"
authors = ["Julian Schmidhuber <schmidhuberj2@protonmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_12"] }
gdk-pixbuf = "0.19.2"
gdk = { version = "0.8.1", package = "gdk4" }
pango = "0.19.3"
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"]}
glib = "0.19.3"

tokio = {version = "1.36.0", features = ["full"]}
futures = "0.3.30"
regex = "1.10.4"
chrono = { version = "0.4.35" }
csv = "1.3.0"
reqwest = "0.11.27"

log = "0.4.21"
env_logger = "0.11.3"

image = "0.25.0"
once_cell = "1.19.0"

gettext-rs = "0.7.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tf_core = { git = "https://gitlab.com/schmiddi-on-mobile/tubefeeder-extractor.git", rev = "ea34170b218a7c1a8dcd6e1a54526801e920778d" }
tf_join = { git = "https://gitlab.com/schmiddi-on-mobile/tubefeeder-extractor.git", rev = "ea34170b218a7c1a8dcd6e1a54526801e920778d" }
tf_filter = { git = "https://gitlab.com/schmiddi-on-mobile/tubefeeder-extractor.git", rev = "ea34170b218a7c1a8dcd6e1a54526801e920778d" }
tf_observer = { git = "https://gitlab.com/schmiddi-on-mobile/tubefeeder-extractor.git", rev = "ea34170b218a7c1a8dcd6e1a54526801e920778d" }
tf_playlist = { git = "https://gitlab.com/schmiddi-on-mobile/tubefeeder-extractor.git", rev = "ea34170b218a7c1a8dcd6e1a54526801e920778d" }
tf_yt = { package = "tf_platform_youtube", git = "https://gitlab.com/schmiddi-on-mobile/tubefeeder-extractor.git", rev = "ea34170b218a7c1a8dcd6e1a54526801e920778d"  }
tf_pt = { package = "tf_platform_peertube", git = "https://gitlab.com/schmiddi-on-mobile/tubefeeder-extractor.git", rev = "ea34170b218a7c1a8dcd6e1a54526801e920778d"  }
